--- a/matisse/src/main/res/values/dimens.xml
+++ b/matisse/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="media_grid_spacing">4dp</dimen>
 
     <dimen name="album_item_height">72dp</dimen>
+    <dimen name="selection_item_size">28dp</dimen>
 </resources>
