--- a/matisse/src/main/res/layout/activity_copy.xml
+++ b/matisse/src/main/res/layout/activity_copy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.DemoActivity">
+    tools:context=".ui.CopyMatisseActivity">
 
     <FrameLayout
         android:id="@+id/fl_container"
