add callback for outside

--- a/matisse/src/main/res/layout/photo_selection_confirm_item.xml
+++ b/matisse/src/main/res/layout/photo_selection_confirm_item.xml
@@ -21,8 +21,8 @@
 
         <com.zhihu.matisse.internal.ui.widget.CheckRadioView
             android:id="@+id/original"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:src="@drawable/ic_preview_radio_off" />
 
@@ -35,7 +35,7 @@
             android:paddingLeft="4dp"
             android:text="原图"
             android:textColor="#000000"
-            android:textSize="14sp" />
+            android:textSize="14dp" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -50,8 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:foreground="?selectableItemBackground"
-        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/photo_send_bg"
         android:text="发送"
         android:textColor="#000000"
         android:textSize="14dp" />
