--- a/matisse/src/main/res/layout/photo_selection_confirm_item.xml
+++ b/matisse/src/main/res/layout/photo_selection_confirm_item.xml
@@ -14,10 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:foreground="?selectableItemBackground"
         android:orientation="horizontal"
         android:padding="16dp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <com.zhihu.matisse.internal.ui.widget.CheckRadioView
             android:id="@+id/original"
