--- a/matisse/src/main/res/layout/view_matisse.xml
+++ b/matisse/src/main/res/layout/view_matisse.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.CopyMatisseActivity">
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fl_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_weight="1" />
 
     <com.zhihu.matisse.ui.SelectionConfirmView
