--- a/matisse/src/main/res/layout/view_matisse.xml
+++ b/matisse/src/main/res/layout/view_matisse.xml
@@ -18,6 +18,7 @@
         android:id="@+id/sc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         tools:layout_height="50dp" />
 
     <FrameLayout
