--- a/matisse/src/main/res/values/colors_zhihu.xml
+++ b/matisse/src/main/res/values/colors_zhihu.xml
@@ -25,12 +25,13 @@
     <color name="zhihu_album_empty_view">#4D000000</color>
 
     <color name="zhihu_item_placeholder">#EAEEF4</color>
-    <color name="zhihu_item_checkCircle_backgroundColor">#1E8AE8</color>
+    <color name="zhihu_item_checkCircle_backgroundColor">#ffbc00</color>
     <color name="zhihu_item_checkCircle_backgroundColor_v2">#ffbc00</color>
     <color name="zhihu_item_checkCircle_borderColor">#FFFFFF</color>
     <color name="zhihu_capture">#424242</color>
 
     <color name="zhihu_page_bg">#FFFFFF</color>
+    <color name="zhihu_page_bg_v2">#f8f8f8</color>
     <color name="zhihu_bottom_toolbar_bg">#FFFFFF</color>
 
     <color name="zhihu_bottom_toolbar_preview_text">#DE000000</color>
@@ -39,7 +40,7 @@
     <color name="zhihu_bottom_toolbar_apply_text_disable">#4D0077D9</color>
 
     <color name="zhihu_preview_bottom_toolbar_back_text">#FFFFFF</color>
-    <color name="zhihu_preview_bottom_toolbar_apply_text">#0077D9</color>
+    <color name="zhihu_preview_bottom_toolbar_apply_text">#ffffff</color>
     <color name="zhihu_preview_bottom_toolbar_apply_text_disable">#4D0077D9</color>
 
     <color name="zhihu_check_original_radio_disable">#808080</color>
