--- a/matisse/src/main/res/layout/media_grid_content.xml
+++ b/matisse/src/main/res/layout/media_grid_content.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2017 Zhihu Inc.
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,32 +18,39 @@
     <ImageView
         android:id="@+id/media_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <com.zhihu.matisse.internal.ui.widget.CheckView
-        android:id="@+id/check_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|right"/>
+    <RelativeLayout
+        android:id="@+id/check_view_click_zone"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="top|right">
+
+        <com.zhihu.matisse.internal.ui.widget.CheckView
+            android:id="@+id/check_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/gif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/ic_gif"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/video_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:textColor="@android:color/white"
         android:textSize="12sp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </merge>
