[update]update to androidx

--- a/matisse/src/main/res/layout/photo_selection_confirm_item.xml
+++ b/matisse/src/main/res/layout/photo_selection_confirm_item.xml
@@ -37,7 +37,7 @@
             android:textSize="14dp" />
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/preview_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
