--- a/matisse/src/main/res/layout/activity_double_matisse.xml
+++ b/matisse/src/main/res/layout/activity_double_matisse.xml
@@ -7,16 +7,9 @@
     android:orientation="vertical"
     tools:context=".ui.DoubleMatisseActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="Online Chat" />
-
     <com.zhihu.matisse.ui.MatisseView
         android:id="@+id/mv"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_height="250dp" />
 
 </LinearLayout>
