--- a/matisse/src/main/res/layout/view_matisse.xml
+++ b/matisse/src/main/res/layout/view_matisse.xml
@@ -19,7 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:layout_height="50dp" />
+        tools:layout_height="50dp"
+        tools:visibility="visible" />
 
     <FrameLayout
         android:id="@+id/empty_view"
