--- a/matisse/src/main/res/layout/media_grid_content.xml
+++ b/matisse/src/main/res/layout/media_grid_content.xml
@@ -13,7 +13,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
         android:id="@+id/media_thumbnail"
@@ -47,10 +48,13 @@
         android:id="@+id/video_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right|bottom"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_gravity="left|bottom"
+        android:layout_marginLeft="6dp"
+        android:layout_marginBottom="6dp"
+        android:drawableLeft="@drawable/icon_media_video"
+        android:drawablePadding="6dp"
         android:textColor="@android:color/white"
-        android:textSize="12sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:visibility="gone" />
 </merge>
