--- a/matisse/src/main/res/values/colors_zhihu.xml
+++ b/matisse/src/main/res/values/colors_zhihu.xml
@@ -25,8 +25,8 @@
     <color name="zhihu_album_empty_view">#4D000000</color>
 
     <color name="zhihu_item_placeholder">#EAEEF4</color>
-    <color name="zhihu_item_checkCircle_backgroundColor">#ffbc00</color>
-    <color name="zhihu_item_checkCircle_backgroundColor_v2">#ffbc00</color>
+    <color name="zhihu_item_checkCircle_backgroundColor">#993ade42</color>
+    <color name="zhihu_item_checkCircle_backgroundColor_v2">#993ade42</color>
     <color name="zhihu_item_checkCircle_borderColor">#FFFFFF</color>
     <color name="zhihu_capture">#424242</color>
 
