--- a/matisse/src/main/res/layout/view_matisse.xml
+++ b/matisse/src/main/res/layout/view_matisse.xml
@@ -19,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        tools:visibility="visible"
         tools:layout_height="50dp" />
 
     <FrameLayout
