--- a/matisse/src/main/res/layout/photo_selection_confirm_item.xml
+++ b/matisse/src/main/res/layout/photo_selection_confirm_item.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal"
     android:paddingLeft="10dp"
     android:paddingTop="6dp"
+    android:id="@+id/root_ll"
     android:paddingRight="10dp"
     android:paddingBottom="5dp">
 
